--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.11",
+    "js-base64": "^2.5.0",
     "vue": "^2.5.17",
     "vue-axios": "^2.1.4",
     "vue-quill-editor": "^3.0.6",
